hphp/hack/test/typecheck/generic_condition_type1.php.like_types.exp
File "generic_condition_type1.php", line 8, characters 12-23:
Invalid `foreach` (Typing[4110])
File "generic_condition_type1.php", line 8, characters 12-23:
Expected `Traversable<[unresolved]>` because this is used in a `foreach` statement
File "generic_condition_type1.php", line 5, characters 48-63:
But got `~\HH\Traversable<Tv1>#\HH\Rx\Traversable`
File "generic_condition_type1.php", line 9, characters 17-35:
Reactive functions can only call other reactive functions. (Typing[4200])
File "generic_condition_type1.php", line 4, characters 23-42:
This function is normal.
File "generic_condition_type1.php", line 17, characters 3-36:
Cannot invoke conditionally reactive function in reactive context, because at least one reactivity condition is not met. (Typing[4237])
File "generic_condition_type1.php", line 15, characters 12-22:
Argument type must be a subtype of `\HH\Rx\Traversable<_>`, now `~varray<int>`.
File "generic_condition_type1.php", line 3, characters 10-19:
This is the function declaration
